# manim-data-structures

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: documentation.md
scripts/: extract_frames.py
src/manim_data_structures/: __init__.py  binary_heap.py  m_array.py  m_enum.py  m_nary_tree.py  m_tree.py  m_variable.py  mlinearcollection.py  mstack.py  utils.py
tests/: conftest.py  test_marray.py  test_mlinearcollection.py  test_mslidingwindow.py
tests/control_data/mlinearcollection/: add_to_scene.npz
tests/test_scene_rendering/: conftest.py
