[tool.poetry]
name = "manim-data-structures"
version = "0.1.7"
description = "A Manim implementation of Data Structures"
authors = ["Nikhil Iyer <iyer.h.nikhil@gmail.com>", "Hammad Nasir <hammadn99@gmail.com>"]
readme = "README.md"
packages = [{include = "manim_data_structures", from = "src"}]
repository = "https://github.com/ufosc/manim-data-structures"
documentation = ""


[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
manim = ">=0.16.0"


[tool.poetry.dev-dependencies]
Sphinx = "^5.3.0"
sphinx-autodoc-typehints = "^1.22"
sphinxcontrib-programoutput = "^0.18"
furo = "^2022.9.29"
recommonmark = "^0.7.1"
pre-commit = "^2.20.0"
isort = "5.12.0"
flake8 = {version = "6.0.0", python = ">=3.8.1,<3.11"}
flake8-builtins = "^2.0.1"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.3.0"
flake8-simplify = "^0.19.3"
flake8-comprehensions = "^3.10.1"
pytest = "^6.2.5"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies.black]
version = ">=22.10.0"
allow-prereleases = false
python = ">=3.7"
markers = "platform_python_implementation == 'CPython'"


[tool.isort]
# from https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ufosc/manim-data-structures/issues"
"Changelog" = "https://github.com/ufosc/manim-data-structures/blob/main/CHANGELOG.md"


[tool.poetry.plugins]
[tool.poetry.plugins."console_scripts"]
"manim" = "manim.__main__:main"
"manimce" = "manim.__main__:main"
[tool.poetry.plugins."manim.plugins"]
"manim_data_structures" = "manim_data_structures"

[tool.pytest.ini_options]
markers = "slow: Mark the test as slow. Can be skipped with --skip_slow"
addopts = "--cov=src --cov-append --last-failed-no-failures=none --no-cov-on-fail --cov-report html:cov_html --cov-report term"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
